Blog posts now use post layout

--- a/_posts/2024-06-23-about.md
+++ b/_posts/2024-06-23-about.md
@@ -4,6 +4,7 @@ slug: about
 date_published: 2024-06-23T10:20:33.000Z
 date_updated: 2024-06-23T20:30:33.000Z
 draft: true
+layout: post
 ---
 
 Telary is an independent publication launched in June 2024 by Constant Deschietere. If you subscribe today, you'll get full access to the website as well as email newsletters about new content when it's available. Your subscription makes this site possible, and allows Telary to continue to exist. Thank you!
