Adding logo for client case

--- a/_posts/2025-11-14-pharma.md
+++ b/_posts/2025-11-14-pharma.md
@@ -4,6 +4,7 @@ layout: case-study
 title: "How a data platform let PharmaCo improve tracability"
 subtitle: "From manual data chaos to automated excellence with a data platform"
 company_name: "PharmaCo"
+company_logo: /assets/img/pharma_co.png
 industry: "Pharma"
 company_size: "50-100 employees"
 company_description: |
