Adding new case study for sales co

--- a/_posts/2025-11-14-pharma.md
+++ b/_posts/2025-11-14-pharma.md
@@ -84,7 +84,7 @@ testimonial:
     really heavy manual work.
   name: "Sarah Mitchell"
   title: "Chief Technology Officer"
-  company: "DataFlow Solutions"
+  company: "PharmaCo"
 
 # Additional metadata
 published_date: "2025-11-14"
