--- a/_posts/2025-11-14-pharma.md
+++ b/_posts/2025-11-14-pharma.md
@@ -1,7 +1,7 @@
 ---
 image: /assets/img/banners/photo-researca-11.avif
 layout: case-study
-title: "How a data platform let PharmaCo improve tracability"
+title: "How a data platform let PharmaCo improve traceability"
 subtitle: "From manual data chaos to automated excellence with a data platform"
 company_name: "PharmaCo"
 company_logo: /assets/img/pharma_co.png
@@ -22,7 +22,7 @@ challenge: |
 
 pain_points:
   - title: "Slow Data Processing"
-    description: "Several different data sources were used leading to complex and slow data synchronisation processes"
+    description: "Several different data sources were used leading to complex and slow data synchronization processes"
   - title: "Data Quality Issues"
     description: "Manual data validation processes led to inconsistencies and errors"
   - title: "Technical Limitations"
@@ -39,11 +39,11 @@ solution_features:
   - title: "Customizable ingestion"
     description: "Python ingestion scripts automated for maximum flexibility"
   - title: "Data warehousing"
-    description: "A single data warehouse aggregating data from every sources in the company"
+    description: "A single data warehouse aggregating data from every source in the company"
   - title: "Efficient Data Modelling"
     description: "Data modelling permitting an easy and cost-effective way of reusing data"
   - title: "Lineage for compliance"
-    description: "Lineage was used to ensure tracability of all the data and every transformation"
+    description: "Lineage was used to ensure traceability of all the data and every transformation"
   - title: "Compliance Ready"
     description: "Compliance features for FDA audits and mandatory regulatory paperwork"
   - title: "Encryption"
@@ -53,7 +53,7 @@ solution_features:
 data_sources:
   - name: "SAP"
     type: "ERP"
-    description: "Production and manufacturing informations"
+    description: "Production and manufacturing information"
   - name: "CSV"
     type: "Flat files"
     description: "Exports, variables..."
@@ -66,7 +66,7 @@ data_sources:
 
 # Results
 results: |
-  The implementation of the data platform delivered transformative results for PharmaCo. With a deep appreciation from operationnal team but also from the C level. Within just 3 months of deployment, they saw dramatic improvements across key metrics and a reduction of mistakes. This help them go to their next financing round.
+  The implementation of the data platform delivered transformative results for PharmaCo. With deep appreciation from the operational team and the C level, within just 3 months of deployment, they saw dramatic improvements across key metrics and a reduction of mistakes. This helped them go to their next financing round.
 
 key_stats:
   - value: "85%"
