--- a/_posts/2025-11-17-salesco.md
+++ b/_posts/2025-11-17-salesco.md
@@ -32,7 +32,7 @@ solution_features:
   - title: "Customizable ingestion"
     description: "Python ingestion scripts automated for maximum flexibility"
   - title: "Data warehousing"
-    description: "A single data warehouse aggregating data from every sources in the company"
+    description: "A single data warehouse aggregating data from every source in the company"
   - title: "Efficient Data Modelling"
     description: "Data modelling permitting an easy and cost-effective way of reusing data"
 
@@ -40,7 +40,7 @@ solution_features:
 data_sources:
   - name: "Salesforce"
     type: "CRM"
-    description: "Client informations and sales data"
+    description: "Client information and sales data"
   - name: "Intercom"
     type: "API"
     description: "Support files"
@@ -51,7 +51,7 @@ data_sources:
 # Results
 results: |
   The implementation of the data platform delivered transformative results for SalesCo. Thanks to the
-  dataplatform and an analysis layer built on top of it, SalesCo achieved a clear view on client profitability, enabling them to set precise KPIs and OKRs. This newfound visibility empowered SalesCo to optimize their sales strategies, leading to a significant increase in yearly margin.
+  data platform and an analysis layer built on top of it, SalesCo achieved a clear view on client profitability, enabling them to set precise KPIs and OKRs. This newfound visibility empowered SalesCo to optimize their sales strategies, leading to a significant increase in yearly margin.
 
 key_stats:
   - value: "$1.498k"
